--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,27 +1,29 @@
 <h2>Create a New Restaurant</h2>
 
+<h3>Submit your favorite restaurant so that it can get reviewed</h3>
+
 <div>
   <%= form_for @restaurant, url: {action: "create"} do |f| %>
-
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-
-
-    <%= f.label :address %>
-    <%= f.text_field :address %>
-
-
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-
-
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-
-
-    <%= f.label :zipcode, "Zip Code" %>
-    <%= f.text_field :zipcode %>
-
+    <p>
+      <%= f.label :name, "Name:" %>
+      <%= f.text_field :name %>
+    </p>
+    <p>
+      <%= f.label :address, "Address:" %>
+      <%= f.text_field :address %>
+    </p>
+    <p>
+      <%= f.label :city, "City:" %>
+      <%= f.text_field :city %>
+    </p>
+    <p>
+      <%= f.label :state, "State:" %>
+      <%= f.text_field :state %>
+    </p>
+    <p>
+      <%= f.label :zipcode, "Zip Code:" %>
+      <%= f.text_field :zipcode %>
+    </p>
 
   <%= f.submit "Create" %>
 <% end %>
