--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -10,7 +10,7 @@
     </p>
     <p>
       <%= f.label :body, "Review:" %>
-      <%= f.text_arez :body %>
+      <%= f.text_area :body, size: "60x12" %>
     </p>
 
   <%= f.submit "Create" %>
