--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,14 +4,19 @@
 
 <div>
   <%= form_for [@restaurant, @review] do |f| %>
-    <p>
-      <%= f.label :rating, "Rating:" %>
-      <%= f.text_field :rating %>
-    </p>
+
     <p>
       <%= f.label :body, "Review:" %>
       <%= f.text_area :body, size: "60x12" %>
     </p>
+
+    <p>
+      <%= f.label :rating, "Rating:" %>
+      <% options = options_from_collection_for_select(@ratings, 'id', 'rating') %>
+      <%= f.select :rating,  options %>
+
+    </p>
+
 
   <%= f.submit "Create" %>
 <% end %>
