Included pagination with will_paginate

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,3 +5,5 @@
     <h4><a href="restaurants/<%=restaurant.id%>"><%= restaurant.name %></a> - <%= restaurant.address %> </h4>
   <% end %>
 </div>
+
+<%= will_paginate @restaurants %>
