added link to reviews#new path from restaurants page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,4 +20,8 @@
       <p><%= review.review_value %>- <%= review.body %></p>
     <% end %>
 <% end %>
+
 </div>
+
+<%= link_to "Add a review for #{@restaurant.name}", new_restaurant_review_path(@restaurant) %>
+
